--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
+html body{
+    height: 100vh;
+    background-image: linear-gradient(to right top, #6cacff, #61beff, #64ceff, #75ddff, #8debff);
+}
+
+.nav-img{
+    transition: transform 0.6s;
+}
+
+.nav-img:hover {
+    transition: 0.60s;
+    transform: rotate(-15deg) scale(1.5);
+}
+
+.container{
+    margin-top: 25px;
+}
+
 input:out-of-range {
-    background-color: rgba(255, 0, 0, 0.25);
-    border: 2px solid red;
+    background-color: rgba(220, 53, 69, 0.25);
+    border: 2px solid #dc3545;
   
 }
+
+.spezial {
+    background-color: #dc3545;
+}
+
