--- a/style.css
+++ b/style.css
@@ -14,9 +14,17 @@ html body{
     transition: transform 0.6s;
 }
 
-.nav-img:hover {
+.nav-img:hover{
     transition: 0.60s;
     transform: rotate(-15deg) scale(1.5);
+}
+
+.offcanvas-body button{
+    margin-top: 25px;
+}
+
+.offcanvas-body h3{
+    margin-top: 25px;
 }
 
 .container{
@@ -26,7 +34,6 @@ html body{
 input:out-of-range {
     background-color: rgba(220, 53, 69, 0.25);
     border: 2px solid #dc3545;
-  
 }
 
 .spezial {
