--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ html body{
 /** ############ NAV-Banner ############ **/
 
 .nav-banner{
-    background-color: black;
-    padding: 5px;
+    background-color: white;
     display: flex;
-    justify-content: flex-end;
 }
+
+.nav-banner img{
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
 
 /** ############ Nav-Menü ############ **/
 
@@ -28,8 +32,9 @@ html body{
 /** ############ Siedebar / Offcanvas ############ **/
 
 .offcanvas-body h3{
-    margin-bottom: 25px;
+    margin-bottom: 25px
 }
+
 
 .offcanvas-body button{
     margin-bottom: 25px;
